--- a/app/src/main/res/layout/activity_unit_converter.xml
+++ b/app/src/main/res/layout/activity_unit_converter.xml
@@ -22,12 +22,15 @@
 
         <TextView
             android:id="@+id/textViewTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
             android:text="CalcMate"
             android:textColor="#FFFFFF"
             android:textSize="32sp"
             android:textStyle="bold"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" />
 
