--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="teal_700">#018786</color>
     <color name="blue_500">#2196F3</color>
     <color name="blue_700">#1976D2</color>
-    <color name="Blue_berry">#0041C2</color>
+    <color name="Blue_berry">#5FA3F1</color>
 
 
     <!-- Basic Calculator Colors -->
