--- a/app/src/main/res/layout/activity_financial_tools.xml
+++ b/app/src/main/res/layout/activity_financial_tools.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="CalcMate"
+            android:text="Financial Tools"
             android:textColor="#FFFFFF"
             android:textSize="32sp"
             android:textStyle="bold"
