--- a/app/src/main/res/layout/activity_scientific_calc.xml
+++ b/app/src/main/res/layout/activity_scientific_calc.xml
@@ -61,7 +61,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_sin"
                 android:layout_width="match_parent"
@@ -80,7 +80,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_cos"
                 android:layout_width="match_parent"
@@ -99,7 +99,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_tan"
                 android:layout_width="match_parent"
@@ -118,7 +118,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_log"
                 android:layout_width="match_parent"
@@ -137,7 +137,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_pi"
                 android:layout_width="match_parent"
@@ -158,7 +158,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/accent">
             <ImageButton
                 android:id="@+id/btn_clear"
                 android:layout_width="match_parent"
@@ -177,7 +177,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_plus_minus"
                 android:layout_width="match_parent"
@@ -196,7 +196,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_percent"
                 android:layout_width="match_parent"
@@ -215,7 +215,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_divide"
                 android:layout_width="match_parent"
@@ -234,7 +234,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_ln"
                 android:layout_width="match_parent"
@@ -311,7 +311,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_multiply"
                 android:layout_width="match_parent"
@@ -330,7 +330,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_pow"
                 android:layout_width="match_parent"
@@ -407,7 +407,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_minus"
                 android:layout_width="match_parent"
@@ -426,7 +426,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_sqrt"
                 android:layout_width="match_parent"
@@ -503,7 +503,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_add"
                 android:layout_width="match_parent"
@@ -522,7 +522,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_fact"
                 android:layout_width="match_parent"
@@ -580,7 +580,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="#FDD835">
             <ImageButton
                 android:id="@+id/btn_equal"
                 android:layout_width="match_parent"
@@ -599,7 +599,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_exp"
                 android:layout_width="match_parent"
@@ -618,7 +618,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
             app:cardCornerRadius="50dp"
-            app:cardBackgroundColor="#0041C2">
+            app:cardBackgroundColor="@color/Blue_berry">
             <ImageButton
                 android:id="@+id/btn_mod"
                 android:layout_width="match_parent"
