--- a/app/src/main/res/layout/activity_data_transfer_convert.xml
+++ b/app/src/main/res/layout/activity_data_transfer_convert.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Data Transfer Rate Converter"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         android:textSize="28sp"
         android:textStyle="bold"
         android:layout_marginTop="30dp"
@@ -60,8 +60,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Convert"
-        android:backgroundTint="@color/Blue_berry"
-        android:textColor="@color/buttonTextColor"
+        android:backgroundTint="#775137"
+        android:textColor="@color/background"
         android:textSize="18sp"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
