--- a/app/src/main/res/layout/activity_policy.xml
+++ b/app/src/main/res/layout/activity_policy.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5"
+    android:background="#7FF9F6ED"
     tools:context=".PolicyActivity">
 
     <!-- Header / Title Bar -->
@@ -12,7 +12,7 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#007BFF"
+        android:background="#775137"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
