--- a/app/src/main/res/layout/activity_bmi_calculator.xml
+++ b/app/src/main/res/layout/activity_bmi_calculator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8FAFC"
+    android:background="#7FF9F6ED"
     tools:context=".BmiCalculatorActivity">
 
     <TextView
@@ -15,7 +15,7 @@
         android:text="BMI Calculator"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +46,7 @@
                 android:text="Enter your details"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#334155" />
+                android:textColor="#775137" />
 
             <!-- Weight Input -->
             <com.google.android.material.textfield.TextInputLayout
@@ -91,7 +91,7 @@
         android:layout_marginTop="24dp"
         android:text="Calculate"
         android:paddingVertical="16dp"
-        android:backgroundTint="#0041C2"
+        android:backgroundTint="#775137"
         app:cornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Results"
-                android:textColor="#0041C2"
+                android:textColor="#775137"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
