--- a/app/src/main/res/layout/activity_bmr_calculator.xml
+++ b/app/src/main/res/layout/activity_bmr_calculator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8FAFC"
+    android:background="#7FF9F6ED"
     tools:context=".BmrCalculatorActivity">
 
     <TextView
@@ -15,7 +15,7 @@
         android:text="BMR Calculator"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,7 +45,7 @@
                 android:text="Enter your details"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#334155" />
+                android:textColor="#775137" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -132,7 +132,7 @@
         android:layout_marginTop="24dp"
         android:text="Calculate BMR"
         android:paddingVertical="16dp"
-        android:backgroundTint="#0041C2"
+        android:backgroundTint="#775137"
         app:cornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +166,7 @@
                 android:text="Results"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#0041C2" />
+                android:textColor="#775137" />
 
             <TextView
                 android:id="@+id/tvBmrResult"
