--- a/app/src/main/res/layout/activity_compound_interest.xml
+++ b/app/src/main/res/layout/activity_compound_interest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8FAFC"
+    android:background="@color/backgroundColor"
     tools:context=".CompoundInterestCalculatorActivity">
 
     <TextView
@@ -15,7 +16,7 @@
         android:text="Compound Interest Calculator"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +47,7 @@
                 android:text="Investment Details"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#334155" />
+                android:textColor="#775137" />
 
             <!-- Principal Amount -->
             <com.google.android.material.textfield.TextInputLayout
@@ -115,7 +116,7 @@
         android:layout_marginTop="24dp"
         android:text="Calculate"
         android:paddingVertical="16dp"
-        android:backgroundTint="#0041C2"
+        android:backgroundTint="#775137"
         app:cornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +150,7 @@
                 android:text="Results"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#0041C2" />
+                android:textColor="#775137" />
 
             <TextView
                 android:id="@+id/tvTotalAmount"
