--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/backgroundColor">
+    android:background="#7FF9F6ED">
 
     <LinearLayout
         android:id="@+id/app_header"
@@ -13,7 +13,7 @@
         android:layout_height="100dp"
         android:orientation="horizontal"
         android:background="@color/Blue_berry"
-        android:elevation="4dp"
+        android:elevation="0dp"
         android:layout_marginTop="0dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -26,7 +26,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="CalcMate"
-            android:textColor="#FFFFFF"
+            android:textColor="#775137"
             android:textSize="32sp"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
@@ -38,8 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="16dp"
-        android:background="@color/backgroundColor">
+        android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -87,7 +86,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Basic Calculator"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -132,7 +131,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Scientific Calc"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -177,7 +176,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Unit Converter"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -222,7 +221,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Financial Tools"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -267,7 +266,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Health Calculator"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -312,7 +311,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Date &amp; Time Tools"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -358,7 +357,7 @@
                             android:layout_height="wrap_content"
                             android:text="Programmer \nCalculator"
                             android:textAlignment="center"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
@@ -386,7 +385,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:background="@color/Blue_berry"
-        android:elevation="8dp"
+        android:elevation="0dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
 
