--- a/app/src/main/res/layout/activity_date_time_tools.xml
+++ b/app/src/main/res/layout/activity_date_time_tools.xml
@@ -15,7 +15,7 @@
         android:layout_height="100dp"
         android:orientation="horizontal"
         android:background="@color/Blue_berry"
-        android:elevation="4dp"
+        android:elevation="0dp"
         android:layout_marginTop="0dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Date &amp; Time Tools"
-            android:textColor="#FFFFFF"
+            android:textColor="#775137"
             android:textSize="32sp"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
@@ -48,7 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="#7FF9F6ED">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,7 +63,7 @@
                 android:text="Choose a Date &amp; Time Tool"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/Blue_berry"
+                android:textColor="#775137"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="24dp" />
 
@@ -106,7 +107,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Date Difference"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="7dp"
@@ -151,7 +152,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Time Zone"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="7dp"
@@ -197,7 +198,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Timestamp"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="7dp"
@@ -225,7 +226,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:background="@color/Blue_berry"
-        android:elevation="8dp"
+        android:elevation="0dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
 
@@ -235,7 +236,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_home"
+            android:src="@drawable/ic_homeselected"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Home"
             android:padding="12dp" />
