--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background=" #D3E3FF"
+    android:background="#7FF9F6ED"
     android:padding="24dp"
     tools:context=".FeedbackActivity">
 
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/feedback_title"
-        android:textColor="?attr/colorOnPrimary"
+        android:textColor="#775137"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +78,7 @@
         android:text="@string/send_button_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="@color/Blue_berry"
+        android:backgroundTint="#775137"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar_app_rating" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
