--- a/app/src/main/res/layout/activity_health_calculator.xml
+++ b/app/src/main/res/layout/activity_health_calculator.xml
@@ -15,7 +15,7 @@
         android:layout_height="100dp"
         android:orientation="horizontal"
         android:background="@color/Blue_berry"
-        android:elevation="4dp"
+        android:elevation="0dp"
         android:layout_marginTop="0dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -29,7 +29,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Health Tools"
-            android:textColor="#FFFFFF"
+            android:textColor="#775137"
             android:textSize="32sp"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
@@ -44,7 +44,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="#7FF9F6ED">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,7 +59,7 @@
                 android:text="Choose a Health Tool"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="#775137"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="24dp" />
 
@@ -103,7 +104,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="BMI"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="7dp"
@@ -149,7 +150,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="BMR"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="7dp"
@@ -196,7 +197,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Ideal Weight"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="7dp"
@@ -243,7 +244,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Calorie Intake"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="7dp"
@@ -270,7 +271,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:background="@color/Blue_berry"
-        android:elevation="8dp"
+        android:elevation="0dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
 
@@ -280,7 +281,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_home"
+            android:src="@drawable/ic_homeselected"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Home"
             android:padding="12dp" />
