--- a/app/src/main/res/layout/activity_length_converter.xml
+++ b/app/src/main/res/layout/activity_length_converter.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFFFFF"
+    android:background="#7FF9F6ED"
     android:padding="16dp"
     android:gravity="center_horizontal"
     tools:context=".LengthConverterActivity">
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Length Converter"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         android:textSize="28sp"
         android:textStyle="bold"
         android:layout_marginTop="30dp"
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Convert"
-        android:backgroundTint="@color/Blue_berry"
+        android:backgroundTint="#775137"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:paddingStart="24dp"
