--- a/app/src/main/res/layout/activity_loan_calculator.xml
+++ b/app/src/main/res/layout/activity_loan_calculator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F0F4F8"
+    android:background="#7FF9F6ED"
     android:padding="16dp"
     tools:context=".LoanCalculatorActivity">
 
@@ -16,7 +16,7 @@
         android:text="Loan Calculator"
         android:textSize="34sp"
         android:textStyle="bold"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginTop="24dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
-        app:cardBackgroundColor="#FFFFFF"
+        android:background="#7FF9F6ED"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -47,7 +47,7 @@
                 android:text="Loan Details"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                android:textColor="#334155" />
+                android:textColor="#775137" />
 
             <EditText
                 android:id="@+id/etLoanAmount"
@@ -87,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Calculate"
-                android:backgroundTint="#0041C2"
+                android:backgroundTint="#775137"
                 android:textColor="#FFFFFF"
                 android:layout_marginTop="24dp"
                 android:paddingVertical="12dp"
@@ -121,7 +121,7 @@
                 android:text="Results"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                android:textColor="#0041C2" />
+                android:textColor="#775137" />
 
             <TextView
                 android:id="@+id/tvMonthlyPayment"
