--- a/app/src/main/res/layout/activity_simple_interest.xml
+++ b/app/src/main/res/layout/activity_simple_interest.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8FAFC"
+    android:background="#7FF9F6ED"
     tools:context=".SimpleInterestCalculatorActivity">
 
     <TextView
@@ -16,7 +16,7 @@
         android:text="Simple Interest Calculator"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +47,7 @@
                 android:text="Investment Details"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#334155" />
+                android:textColor="#775137" />
 
             <!-- Principal Amount -->
             <com.google.android.material.textfield.TextInputLayout
@@ -102,7 +102,7 @@
         android:layout_marginTop="24dp"
         android:text="Calculate"
         android:paddingVertical="16dp"
-        android:backgroundTint="#0041C2"
+        android:backgroundTint="#775137"
         app:cornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +136,7 @@
                 android:text="Results"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="#0041C2" />
+                android:textColor="#775137" />
 
             <TextView
                 android:id="@+id/tvTotalAmount"
