--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -35,7 +35,7 @@
             android:letterSpacing="0.1"
             android:text="POWERED BY"
             android:textAllCaps="true"
-            android:textColor="#FFFFFF"
+            android:textColor="#775137"
             android:textSize="14sp"
             android:textStyle="normal" />
 
