--- a/app/src/main/res/layout/activity_timestamp.xml
+++ b/app/src/main/res/layout/activity_timestamp.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8F0F3"
+    android:background="#7FF9F6ED"
     tools:context=".TimestampActivity">
 
     <!-- Main Card View for a clean and modern look -->
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:orientation="horizontal"
-                android:background="#0041C2"
+                android:background="@color/backgroundColor"
                 android:elevation="4dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
@@ -45,7 +45,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Date Difference"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#775137"
                     android:textSize="32sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -100,8 +100,8 @@
                 android:layout_height="wrap_content"
                 android:text="Convert to Date"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#0041C2"
-                android:textColor="@android:color/white"
+                android:backgroundTint="@color/backgroundColor"
+                android:textColor="#775137"
                 android:padding="12dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -132,8 +132,8 @@
                 android:layout_height="wrap_content"
                 android:text="Convert to Timestamp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="#0041C2"
-                android:textColor="@android:color/white"
+                android:backgroundTint="@color/backgroundColor"
+                android:textColor="#775137"
                 android:padding="12dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
