--- a/app/src/main/res/layout/activity_unit_converter.xml
+++ b/app/src/main/res/layout/activity_unit_converter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/backgroundColor">
+    android:background="#7FF9F6ED">
 
     <!-- App Header with Title and Star -->
     <LinearLayout
@@ -14,7 +14,7 @@
         android:layout_height="100dp"
         android:orientation="horizontal"
         android:background="@color/Blue_berry"
-        android:elevation="4dp"
+        android:elevation="0dp"
         android:layout_marginTop="0dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -27,7 +27,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Unit Converter"
-            android:textColor="#FFFFFF"
+            android:textColor="#775137"
             android:textSize="32sp"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
@@ -42,7 +42,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="16dp"
-        android:background="@color/backgroundColor">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,7 +55,7 @@
                 android:text="Choose a Converter"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/Blue_berry"
+                android:textColor="#775137"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="24dp" />
 
@@ -101,7 +101,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Length Converter"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -147,7 +147,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Weight Converter"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -193,7 +193,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Temperature \nConverter"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -239,7 +239,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Volume Converter"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -285,7 +285,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Area Converter"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -331,7 +331,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Data Transfer Rate"
-                            android:textColor="#0041C2"
+                            android:textColor="#717171"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -355,7 +355,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:background="@color/Blue_berry"
-        android:elevation="8dp"
+        android:elevation="0dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp">
 
