--- a/app/src/main/res/layout/activity_weight_converter.xml
+++ b/app/src/main/res/layout/activity_weight_converter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/backgroundColor"
+    android:background="#7FF9F6ED"
     android:padding="16dp"
     android:gravity="center_horizontal"
     tools:context=".WeightConverterActivity">
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:text="Weight Converter"
         android:layout_marginTop="30dp"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         android:textSize="28sp"
         android:textStyle="bold"
         android:layout_marginBottom="24dp" />
@@ -42,7 +42,7 @@
         android:background="@drawable/rounded_spinner_bg"
         android:padding="8dp"
         android:layout_marginBottom="16dp"
-        android:popupBackground="@color/backgroundColor"/>
+        android:popupBackground="@color/white"/>
 
     <!-- Spinner for "to" unit selection -->
     <Spinner
@@ -52,7 +52,7 @@
         android:background="@drawable/rounded_spinner_bg"
         android:padding="8dp"
         android:layout_marginBottom="24dp"
-        android:popupBackground="@color/backgroundColor"/>
+        android:popupBackground="@color/white"/>
 
     <!-- Button to perform the conversion -->
     <Button
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Convert"
-        android:backgroundTint="@color/Blue_berry"
+        android:backgroundTint="#775137"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:paddingStart="24dp"
