--- a/app/src/main/res/layout/calorietrack.xml
+++ b/app/src/main/res/layout/calorietrack.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5"
+    android:background="#7FF9F6ED"
     android:padding="16dp">
 
     <!-- Title -->
@@ -15,7 +15,7 @@
         android:text="Calorie Intake"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -125,7 +125,7 @@
         android:text="Recent Intake"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#0041C2"
+        android:textColor="#775137"
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardView_total" />
