--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
     <color name="teal_700">#018786</color>
     <color name="blue_500">#2196F3</color>
     <color name="blue_700">#1976D2</color>
-    <color name="Blue_berry">#5FA3F1</color>
+    <color name="Blue_berry">#e0d8cb</color>
+
 
 
     <!-- Basic Calculator Colors -->
@@ -123,7 +124,7 @@
 
 
     <!-- Background and surface colors -->
-    <color name="backgroundColor">#FFFFFF</color>
+    <color name="backgroundColor">#7FF9F6ED</color>
     <color name="surfaceColor">#1E1E1E</color>
 
     <!-- Text and hint colors -->
